Cập nhật index.html và style.css

--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #f3e9ff;
+  
 }
 
 h1 {
   text-align: center;
   font-family: myFont;
-  font-size: 3.5em;
+  font-size: 3.4em;
   margin-bottom: 30px;
   color: #5d37c8;
 }
@@ -37,15 +38,18 @@ p {
 } */
 
 li {
+  padding: 0 10px;
+  margin: 10px;
   margin-bottom: 15px;
   list-style: none;
   color: wheat;
+  border-left: 5px solid transparent;
 }
-li:before {
+/* li:before {
   content: "\2503";
   font-weight: bolder;
   color: #f3d355;
-}
+} */
 
 img {
   height: 150px;
@@ -58,20 +62,21 @@ img {
   padding: 20px;
   margin-top: 60px;
   margin-bottom: 20px;
+  max-width: 750px;
 }
 
 .indented-paragraph {
-  padding-left: 17px;
+  padding-left: 25px;
 }
 
-.highlight {
+/* .highlight {
   background-color: wheat;
   color: black;
   border-radius: 4px;
   justify-content: center;
   align-items: center;
   padding: 2px 6px;
-}
+} */
 
 /* .download_button {
   background-color: #f6ca28; 
@@ -108,4 +113,18 @@ img {
 .footer {
   color: #84778f;
   text-align: center;
+}
+
+.border {
+  border-color: #ebbd15;
+  color: wheat;
+}
+
+p a {
+  background-color: #feedb7;
+  text-decoration: none;
+  border-radius: 4px;
+  padding: 2px 1px 2px 6px;
+  font-weight: 600;
+  
 }
